Fixing all the alignments

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
 
 header {
   background: #4e5ac5;
-  /* width: 100%; */
   z-index: 9;
   position: sticky;
   top: 0;
@@ -19,7 +18,6 @@ header {
 }
 
 .left {
-  /* flex: 6.2; */
   display: inline-block;
   padding-top: 0.3125rem;
   padding-bottom: 00.3125rem;
@@ -37,7 +35,7 @@ header {
   align-items: center;
 }
 
-.topbarMenu {
+.topbarOption > ul {
   display: flex;
   padding-left: 0;
   margin-bottom: 0;
@@ -46,7 +44,6 @@ header {
 }
 
 .right {
-  /* flex: 0.8; */
   color: #fff;
   transition: 0.35s;
   display: block;
@@ -68,13 +65,11 @@ header {
 .hero {
   width: 100%;
   height: 100vh;
-  /* position: relative; */
   background-image: url("img/background.jpg");
   background-size: cover;
 }
 
 .introduction {
-  /* position: absolute; */
   width: 100%;
   height: 100%;
   background-image: linear-gradient(
@@ -84,9 +79,6 @@ header {
 }
 
 .introBox {
-  position: absolute;
-  width: 100%;
-  height: 93vh;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(7, 1fr);
@@ -138,7 +130,7 @@ header {
   border: 2px solid white;
 }
 
-/* First Section */
+/* About Section */
 
 .about {
   display: flex;
@@ -148,7 +140,6 @@ header {
 
 .tiles {
   width: 100%;
-  /* flex: 0.33; */
   display: grid;
   grid-template-rows: repeat(1, 1fr);
   grid-template-columns: repeat(4, 1fr);
@@ -156,7 +147,6 @@ header {
 }
 
 .about > .tiles > .tile {
-  /* flex: 0.25; */
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -257,7 +247,6 @@ header {
 .container {
   display: flex;
   align-items: center;
-  /* padding: 30px 150px; */
   width: 72%;
   flex-direction: column;
 }
@@ -287,9 +276,6 @@ header {
   flex: 0.4;
 }
 .projectDesc {
-  /* display: flex;
-  align-items: center;
-  justify-content: space-between; */
   padding-bottom: 50px;
   display: grid;
   grid-template-rows: repeat(1, 1fr);
@@ -317,7 +303,6 @@ header {
 .description > i {
   flex: 0.08;
   font-size: 26px;
-  /* color: rgb(13, 187, 187); */
 }
 .fa-book {
   color: rgb(13, 187, 187);
@@ -365,7 +350,6 @@ hr {
 .pricing {
   background-color: rgb(61, 69, 180);
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
 }
@@ -382,7 +366,6 @@ hr {
   text-align: center;
   color: white;
   font-size: 15px;
-  /* padding: 0 20%; */
   margin: 50px;
 }
 
@@ -395,12 +378,6 @@ hr {
 }
 
 .price__tiles {
-  /* flex: 0.6; */
-  /* width: 100%;
-  height: 100%; */
-  /* display: flex;
-  justify-content: space-between;
-  align-items: flex-start; */
   display: grid;
   grid-template-rows: repeat(1, 1fr);
   grid-template-columns: repeat(3, 1fr);
@@ -411,15 +388,12 @@ hr {
   width: calc(100% - 20px) !important;
   height: 500px;
   margin: auto;
-  /* position: relative; */
   background: url(img/image1.jpg);
   background-size: cover;
   margin-bottom: 30px;
-  /* margin: 20px; */
 }
 
 .price__tiles > .tile > .content {
-  /* position: absolute; */
   width: 100%;
   height: 100%;
 }
@@ -519,7 +493,6 @@ hr {
 
 .container > .mem {
   width: 100%;
-  /* display: flex; */
   margin-bottom: 50px;
 }
 
@@ -528,14 +501,8 @@ hr {
   display: grid;
   grid-template-rows: repeat(1, 1fr);
   grid-template-columns: repeat(2, 1fr);
-  /* align-items: flex-start;
-  justify-content: space-between; */
 }
 .mem > .m {
-  /* flex: 0.5; */
-  /* display: flex;
-  align-items: flex-start;
-  justify-content: space-between; */
   grid-template-rows: repeat(1, 1fr);
   grid-template-columns: repeat(2, 1fr);
   display: grid;
@@ -550,13 +517,8 @@ hr {
 }
 
 .mem > .m > .des {
-  /* flex: 0.4; */
   width: calc(100% - 20px);
   height: 80%;
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: flex-start; */
-  /* align-items: flex-start; */
   text-align: left;
   margin-left: 20px;
 }
@@ -594,26 +556,22 @@ hr {
 .contact {
   background: url(img/panorama-3094696_1920.jpg);
   background-size: cover;
-  /* height: 100vh !important; */
-  /* position: relative; */
 }
 
 .contact > .main {
-  /* position: absolute; */
   width: 100%;
   height: 100%;
   color: white;
   background: rgba(0, 0, 0, 0.7);
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 }
 
 .container > h1 {
   flex: 0.1;
   font-size: 2.25rem;
-  /* font-size: 15px; */
+ 
 }
 
 .main > .container > p {
@@ -629,7 +587,6 @@ hr {
   flex: 0.5;
   padding: 40px;
   display: flex;
-  /* min-height: 80%; */
   width: 100%;
   border: 1px solid transparent;
   border-radius: 5px;
@@ -638,22 +595,18 @@ hr {
 
 .userForm > .form {
   width: 100%;
-  /* display: flex;
-  flex-direction: row;
-  justify-content: space-between; */
   display: grid;
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(2, 1fr);
 }
 
 .userForm > .form > .contactus {
-  flex: 0.6;
   background-color: white;
 }
 
-.userForm > .form > .info {
+/* .userForm > .form > .info {
   flex: 0.4;
-}
+} */
 
 .contactus {
   display: flex;
